grammar.js
    source_file: ($) =>
      seq(
        optional($._terminator),
        optional(
          seq(
            $._module_item,
            repeat(seq($._terminator, $._module_item)),
            optional($._terminator),
          ),
        ),
      ),

    _module_item: ($) =>
      choice(
        $.attribute_stmt,
        $.option_stmt,
        $._declaration,
        $.preprocessor_directive,
      ),

    preprocessor_directive: ($) => choice($.preprocessor_const, $.preprocessor_if),

    preprocessor_const: ($) =>
      seq(kwSharp('Const'), field('name', $.identifier), '=', field('value', $._expression)),

    preprocessor_if: ($) =>
      seq(
        kwSharp('If'),
        field('condition', $._expression),
        kw('Then'),
        $._terminator,
        repeat(seq($._preprocessor_body_item, $._terminator)),
        repeat($.preprocessor_elseif),
        optional($.preprocessor_else),
        kwSharp('End'),
        kw('If'),
      ),

    preprocessor_elseif: ($) =>
      seq(
        kwSharp('ElseIf'),
        field('condition', $._expression),
        kw('Then'),
        $._terminator,
        repeat(seq($._preprocessor_body_item, $._terminator)),
      ),

    preprocessor_else: ($) =>
      seq(
        kwSharp('Else'),
        $._terminator,
        repeat(seq($._preprocessor_body_item, $._terminator)),
      ),

    // Happy-path scope: body items are statements. `_statement` already
    // includes `variable_declaration`, `const_declaration`, and nested
    // `preprocessor_directive`, which covers the typical `#If VBA7`
    // compatibility shim and conditional constants. Full procedure
    // declarations inside `#If` are deferred to a later iteration.
    _preprocessor_body_item: ($) => $._statement,

    // ─── Procedure declarations ────────────────────────────────────────

    _visibility: ($) => $.visibility,

    visibility: (_) => choice(kw('Public'), kw('Private'), kw('Friend')),

    sub_declaration: ($) =>
      seq(
        optional(field('visibility', $._visibility)),
        optional(kw('Static')),
        kw('Sub'),
        field('name', $.identifier),
        optional(field('parameters', $.parameter_list)),
        $._terminator,
        field('body', optional($.statement_block)),
        kw('End'),
        kw('Sub'),
      ),

    declare_statement: ($) =>
      seq(
        optional(field('visibility', $._visibility)),
        kw('Declare'),
        optional(field('ptr_safe', $.ptr_safe)),
        choice(kw('Sub'), kw('Function')),
        field('name', $.identifier),
        kw('Lib'),
        field('lib', $.string_literal),
        optional(seq(kw('Alias'), field('alias', $.string_literal))),
        optional(field('parameters', $.parameter_list)),
        optional(seq(kw('As'), field('return_type', $._type_name))),
      ),

    ptr_safe: (_) => kw('PtrSafe'),

    parameter_list: ($) => seq('(', optional(commaSep1($.parameter)), ')'),

    parameter: ($) =>
      seq(
        optional(kw('Optional')),
        optional(choice(kw('ByVal'), kw('ByRef'))),
        optional(kw('ParamArray')),
        field('name', $.identifier),
        optional(seq('(', ')')),
        optional(seq(kw('As'), field('type', $._type_name))),
        optional(seq('=', field('default', $._expression))),
      ),

    // ─── Variable / const / type / enum ───────────────────────────────

    variable_declaration: ($) =>
      seq(
        choice(kw('Dim'), kw('Public'), kw('Private'), kw('Static'), kw('Global')),
        optional(kw('WithEvents')),
        commaSep1($.variable_declarator),
      ),

    variable_declarator: ($) =>
      seq(
        field('name', $.identifier),
        optional($._array_bounds),
        optional(seq(kw('As'), optional(kw('New')), field('type', $._type_name))),
      ),

    _array_bounds: ($) =>
      seq(
        '(',
        optional(commaSep1($.array_bound)),
        ')',
      ),

    array_bound: ($) =>
      choice(
        seq(field('lower', $._expression), kw('To'), field('upper', $._expression)),
        $._expression,
      ),

    const_declaration: ($) =>
      seq(
        optional(field('visibility', $._visibility)),
        kw('Const'),
        commaSep1(
          seq(
            field('name', $.identifier),
            optional(seq(kw('As'), field('type', $._type_name))),
            '=',
            field('value', $._expression),
          ),
        ),
      ),

    type_declaration: ($) =>
      seq(
        optional(field('visibility', $._visibility)),
        kw('Type'),
        field('name', $.identifier),
        $._terminator,
        repeat(seq($.type_field, $._terminator)),
        kw('End'),
        kw('Type'),
      ),

    type_field: ($) =>
      seq(
        field('name', $.identifier),
        optional($._array_bounds),
        kw('As'),
        field('type', $._type_name),
      ),

    enum_declaration: ($) =>
      seq(
        optional(field('visibility', $._visibility)),
        kw('Enum'),
        field('name', $.identifier),
        $._terminator,
        repeat(seq($.enum_member, $._terminator)),
        kw('End'),
        kw('Enum'),
      ),

    enum_member: ($) =>
      seq(field('name', $.identifier), optional(seq('=', field('value', $._expression)))),

    // ─── Types ─────────────────────────────────────────────────────────

    _type_name: ($) =>
      choice(
        $.builtin_type,
        $.qualified_name,
        $.identifier,
      ),

    builtin_type: ($) =>
      choice(
        kw('Boolean'),
        kw('Byte'),
        kw('Currency'),
        kw('Date'),
        kw('Double'),
        kw('Integer'),
        kw('Long'),
        kw('LongLong'),
        kw('LongPtr'),
        kw('Object'),
        kw('Single'),
        kw('String'),
        kw('Variant'),
      ),

    // ─── Statements ────────────────────────────────────────────────────

    statement_block: ($) =>
      seq(
        $._statement,
        repeat(seq($._terminator, $._statement)),
        optional($._terminator),
      ),

    _statement: ($) =>
      choice(
        $.if_statement,
        $.for_statement,
        $.for_each_statement,
        $.do_statement,
        $.while_statement,
        $.select_statement,
        $.with_statement,
        $.on_error_statement,
        $.resume_statement,
        $.goto_statement,
        $.exit_statement,
        $.return_statement,
        $.redim_statement,
        $.set_statement,
        $.let_statement,
        $.call_statement,
        $.variable_declaration,
        $.const_declaration,
        $.label,
        $.assignment,
        $.paren_less_call,
        $._expression_statement,
        $.preprocessor_directive,
      ),

    paren_less_call: ($) =>
      prec(
        -1,
        seq(
          field('function', choice($.identifier, $.member_access, $.leading_dot_member_access)),
          field('arguments', $.paren_less_argument_list),
        ),
      ),

    paren_less_argument_list: ($) => namedOrPositional($.identifier, $._expression),

    redim_statement: ($) =>
      seq(
        kw('ReDim'),
        optional(field('preserve', $.preserve)),
        commaSep1($.variable_declarator),
      ),

    preserve: (_) => kw('Preserve'),

    set_statement: ($) =>
      seq(
        kw('Set'),
        field('target', choice($._expression, $.leading_dot_member_access)),
        '=',
        optional(kw('New')),
        field('value', $._expression),
      ),

    assignment: ($) =>
      prec.right(
        100,
        seq(
          field('target', choice($._expression, $.leading_dot_member_access)),
          '=',
          field('value', $._expression),
        ),
      ),

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.new_expression,
        $.addressof_expression,
        $._primary_expression,
      ),

    _primary_expression: ($) =>
      choice(
        $.parenthesized_expression,
        $.call_expression,
        $.member_access,
        $.literal,
        $.identifier,
        $.me_expression,
      ),

    new_expression: ($) => prec.right(PREC.unary, seq(kw('New'), $._type_name)),

    call_expression: ($) =>
      prec.left(
        PREC.call,
        seq(
          field('function', $._primary_expression),
          token.immediate('('),
          optional(field('arguments', $.argument_list)),
          ')',
        ),
      ),

    argument_list: ($) => namedOrPositional($.identifier, $._expression),

    member_access: ($) =>
      prec.left(
        PREC.member,
        seq(
          field('object', $._primary_expression),
          '.',
          field('property', $.identifier),
        ),
      ),

    qualified_name: ($) =>
      prec.left(
        PREC.member,
        seq($.identifier, repeat1(seq('.', $.identifier))),
      ),

    unary_expression: ($) =>
      prec.right(
        PREC.unary,
        seq(field('operator', choice('-', '+', kw('Not'))), field('operand', $._expression)),
      ),

    binary_expression: ($) => {
      const table = [
        ['^', PREC.power, 'right'],
        ['*', PREC.mul, 'left'],
        ['/', PREC.mul, 'left'],
        ['\\', PREC.int_div, 'left'],
        [kw('Mod'), PREC.mod, 'left'],
        ['+', PREC.add, 'left'],
        ['-', PREC.add, 'left'],
        ['&', PREC.concat, 'left'],
        [kw('Like'), PREC.compare, 'left'],
        [kw('Is'), PREC.compare, 'left'],
        ['=', PREC.compare, 'left'],
        ['<>', PREC.compare, 'left'],
        ['<', PREC.compare, 'left'],
        ['>', PREC.compare, 'left'],
        ['<=', PREC.compare, 'left'],
        ['>=', PREC.compare, 'left'],
        [kw('And'), PREC.and, 'left'],
        [kw('Or'), PREC.or, 'left'],
        [kw('Xor'), PREC.xor, 'left'],
        [kw('Eqv'), PREC.eqv, 'left'],
        [kw('Imp'), PREC.imp, 'left'],
      ];
      return choice(
        ...table.map(([op, p, assoc]) => {
          const rule = seq(
            field('left', $._expression),
            field('operator', op),
            field('right', $._expression),
          );
          return assoc === 'right' ? prec.right(p, rule) : prec.left(p, rule);
        }),
      );
    },

    // ─── Literals ─────────────────────────────────────────────────────

    literal: ($) =>
      choice(
        $.integer_literal,
        $.float_literal,
        $.hex_literal,
        $.octal_literal,
        $.string_literal,
        $.date_literal,
        $.boolean_literal,
        $.nothing_literal,
        $.null_literal,
        $.empty_literal,
      ),

    integer_literal: (_) => token(/[0-9]+[%&^]?/),

    float_literal: (_) =>
      token(choice(/[0-9]+\.[0-9]+([eE][+-]?[0-9]+)?[!#@]?/, /[0-9]+[eE][+-]?[0-9]+[!#@]?/)),

    hex_literal: (_) => token(/&[hH][0-9a-fA-F]+[%&^]?/),

    string_literal: (_) => token(seq('"', repeat(choice(/[^"\r\n]/, '""')), '"')),

    date_literal: (_) => token(seq('#', /[^#\r\n]+/, '#')),

    boolean_literal: (_) => choice(kw('True'), kw('False')),

    nothing_literal: (_) => kw('Nothing'),
    identifier: (_) => /[A-Za-z_][A-Za-z0-9_]*/,

    comment: (_) =>
      token(
        choice(
          seq("'", /[^\r\n]*/),
          seq(/[rR][eE][mM]/, /[ \t][^\r\n]*/),
        ),
      ),

    _terminator: ($) => repeat1($._nl),
